--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ino.Glass</title>
+    <title>InoGlass</title>
     <link rel="icon" href="img/favicon.ico" />
+
     <!-- CSS FILES -->
     <link rel="stylesheet" type="text/css" href="./css/uikit.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/marketing.css" />
   </head>
+
   <body>
     <!-- TOP -->
     <div class="top-wrap uk-position-relative uk-light uk-background-secondary">
@@ -24,7 +26,7 @@
           >
             <div class="uk-navbar-left">
               <div class="uk-navbar-item uk-padding-remove-horizontal">
-                <a class="uk-logo" title="Logo" href=""
+                <a class="uk-logo" title="Logo" href="./index.html"
                   ><img src="./img/glas/logo4.png" alt="Logo"
                 /></a>
               </div>
@@ -32,7 +34,7 @@
             <div class="uk-navbar-right">
               <ul class="uk-navbar-nav uk-visible@s">
                 <li class="uk-active uk-visible@m">
-                  <a href="" data-uk-icon="home"></a>
+                  <a href="./index.html" data-uk-icon="home"></a>
                 </li>
                 <li>
                   <a href="#" data-uk-icon="chevron-down">Productos</a>
@@ -44,7 +46,7 @@
                     </ul>
                   </div>
                 </li>
-                <li><a href="">Galeria</a></li>
+                <li><a href="./galeria.html">Galeria</a></li>
                 <li><a href="">Contacto</a></li>
               </ul>
               <a
@@ -455,10 +457,10 @@
       <div class="uk-container">
         <div class="uk-grid uk-grid-large" data-uk-grid>
           <div class="uk-width-1-2@m">
-            <h5>CRISTAL.INOX</h5>
+            <h5>InoGlass</h5>
             <p>
               Nuestro objetivo es su satisfacción.
-              contacto: <a href="#" title="">cristalinox@gmail.com</a>
+              contacto: <a href="#" title="">inoglass@gmail.com</a>
             </p>
             <div>
               <a href="" class="uk-icon-button" data-uk-icon="facebook"></a>
@@ -506,7 +508,7 @@
 							<li class="uk-nav-divider"></li>
             </ul>
 					</li>
-					<li class="uk-nav-header"><a href="#">GALERIA</a></li>
+					<li class="uk-nav-header"><a href="./gallery.html">GALERIA</a></li>
           
         </ul>
         <h3>CONTACTAR</h3>
