--- a/galeria.html
+++ b/galeria.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -95,7 +95,7 @@
         </ul>
 
         <ul
-          class="filter uk-child-width-1-3@m uk-child-width-1-2@s uk-text-center uk-light uk-animation-toggle"
+          class="filter uk-child-width-1-3@m uk-child-width-1-2@s uk-text-center uk-light"
           tabindex="0"
           uk-grid="masonry: true; parallax: 500"
           uk-lightbox="animation: slide"
