iconos en pagina de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="./css/uikit.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/marketing.css" />
     <link rel="stylesheet" href="./css/estilos.css" />
+
+    <!-- ICONS FONTAWESOME -->
     <script
       src="https://kit.fontawesome.com/f7fe0cc5ec.js"
       crossorigin="anonymous"
@@ -138,9 +140,13 @@
             <br />Río Cuarto, Córdoba<br />5800
           </p>
           <p>
-            <a>inoglassr4@gmail.com</a>
-            <br /><a>@inoglass</a><br />
-            358 5064360
+            <a><span class="far fa-envelope"></span> inoglassr4@gmail.com</a>
+            <br /><a href="https://www.instagram.com/ino.glass" target="_blank"
+              ><span class="fab fa-instagram"></span> ino.glass</a
+            >
+            <br /><a href="#" target="_blank"
+              ><span class="fab fa-whatsapp"></span> 358 5064360</a
+            >
           </p>
         </div>
       </div>
