--- a/contacto.html
+++ b/contacto.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Galería</title>
-    <link rel="icon" href="img/favicon.ico" />
+    <title>Contacto</title>
+    <link rel="icon" href="img/logos/favicon.png" />
 
     <!-- CSS FILES -->
     <link rel="stylesheet" type="text/css" href="./css/uikit.min.css" />
@@ -33,7 +33,7 @@
             <div class="uk-navbar-left">
               <div class="uk-navbar-item uk-padding-remove-horizontal">
                 <a class="uk-logo" title="Logo" href="./index.html"
-                  ><img src="./img/glas/logo4.png" alt="Logo"
+                  ><img src="./img/logos/inoglass color.png" alt="Logo"
                 /></a>
               </div>
             </div>
@@ -137,14 +137,16 @@
           <h3 class="uk-panel-title">Datos de contacto</h3>
           <p>
             <strong>InoGlass</strong>
-            <br />Río Cuarto, Córdoba<br />5800
+            <br />Río Cuarto, Córdoba<br />C.P. 5800
           </p>
           <p>
             <a><span class="far fa-envelope"></span> inoglassr4@gmail.com</a>
             <br /><a href="https://www.instagram.com/ino.glass" target="_blank"
               ><span class="fab fa-instagram"></span> ino.glass</a
             >
-            <br /><a href="#" target="_blank"
+            <br /><a
+              href="https://wa.me/5493585064360?text=Hola!%20Quiero%20hacer%20una%20consulta!"
+              target="_blank"
               ><span class="fab fa-whatsapp"></span> 358 5064360</a
             >
           </p>
@@ -169,7 +171,7 @@
           class="uk-nav uk-nav-primary uk-nav-center uk-margin-auto-vertical uk-nav-parent-icon"
           uk-nav
         >
-          <li class="uk-nav-header"><a href="#">INICIO</a></li>
+          <li class="uk-nav-header"><a href="./index.html">INICIO</a></li>
           <li class="uk-nav-header uk-parent">
             <a href="#">PRODUCTOS</a>
             <ul class="uk-nav-sub">
@@ -186,20 +188,19 @@
         <div class="uk-flex uk-flex-column">
           <div class="uk-margin-xlarge-top">
             <hr class="uk-text-center uk-divider-small uk-margin-small" />
-            <h3 class="uk-text-center uk-margin-small">CONTACTAR</h3>
+            <h3 class="uk-text-center uk-margin-small">CONTACTO</h3>
             <h5 class="uk-text-center uk-margin-small">
-              <span
-                class="uk-margin-small-right uk-icon"
-                data-uk-icon="icon: whatsapp"
-              ></span>
-              3585064360
+              <a
+                href="https://wa.me/5493585064360?text=Hola!%20Quiero%20hacer%20una%20consulta!"
+                target="_blank"
+                ><span class="fab fa-whatsapp"></span> 358 5064360</a
+              >
             </h5>
             <h5 class="uk-text-center uk-margin-small">
-              <span
-                class="uk-margin-small-right uk-icon"
-                data-uk-icon="icon: mail"
-              ></span>
-              inoglass@gmail.com
+              <a href="mailto:">
+                <span class="far fa-envelope"></span>
+                inoglassr4@gmail.com</a
+              >
             </h5>
           </div>
         </div>
@@ -207,8 +208,46 @@
     </div>
 
     <!-- /OFFCANVAS -->
+
+    <!-- FOOTER -->
+    <footer class="uk-section uk-section-secondary uk-padding-remove-bottom">
+      <div class="uk-container">
+        <hr class="uk-divider-small uk-margin-large-bottom uk-text-center" />
+        <div class="uk-grid uk-grid-large" data-uk-grid>
+          <div class="uk-width-1-2@m">
+            <a class="uk-logo" title="Logo" href="./index.html"
+              ><img src="./img/logos/inoglass blanco.png" alt="Logo"
+            /></a>
+            <p>
+              Nuestro objetivo es su satisfacción. contacto:
+              <a href="#" title="">inoglassr4@gmail.com</a>
+            </p>
+            <div>
+              <a href="" class="uk-icon-button" data-uk-icon="facebook"></a>
+              <a href="" class="uk-icon-button" data-uk-icon="instagram"></a>
+            </div>
+          </div>
+          <div class="uk-width-1-6@m">
+            <h5>PRODUCTOS</h5>
+            <ul class="uk-list">
+              <li>Barandas</li>
+              <li>Mamparas</li>
+              <li>Herrajes</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="uk-text-center uk-padding uk-padding-remove-horizontal">
+        <span class="uk-text-small uk-text-muted"
+          >© 2020 Francisco Fourcade -
+        </span>
+      </div>
+    </footer>
+    <!-- /FOOTER -->
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/uikit.min.js"></script>
     <script src="./js/uikit-icons.min.js"></script>
+    <script src="./js/logo.js"></script>
   </body>
 </html>
