--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>InoGlass</title>
-    <link rel="icon" href="img/favicon.ico" />
+    <link rel="icon" href="img/logos/favicon.png" />
 
     <!-- CSS FILES -->
     <link rel="stylesheet" type="text/css" href="./css/uikit.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/marketing.css" />
     <link rel="stylesheet" href="./css/estilos.css" />
+
+    <!-- ICONS FONTAWESOME -->
+    <script
+      src="https://kit.fontawesome.com/f7fe0cc5ec.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -27,8 +33,8 @@
           >
             <div class="uk-navbar-left">
               <div class="uk-navbar-item uk-padding-remove-horizontal">
-                <a class="uk-logo" title="Logo" href="./index.html"
-                  ><img src="./img/glas/logo4.png" alt="Logo"
+                <a class="uk-logo" title="Logo" href="./index.html" id="logo"
+                  ><img src="./img/logos/inoglass blanco.png" alt="Logo"
                 /></a>
               </div>
             </div>
@@ -48,7 +54,7 @@
                   </div>
                 </li>
                 <li><a href="./galeria.html">Galeria</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
               </ul>
               <a
                 class="uk-navbar-toggle uk-navbar-item uk-hidden@s"
@@ -95,12 +101,8 @@
         <!-- TOP IMAGE -->
         <img
           src="./img/glas/pileta 3 miniposte_fondo1.jpg"
-          data-srcset="./img/glas/pileta 3 miniposte_fondo1.jpg 640w,
-				./img/glas/pileta 3 miniposte_fondo1.jpg 960w,
-				./img/glas/pileta 3 miniposte_fondo1.jpg 1200w,
-				./img/glas/pileta 3 miniposte_fondo1.jpg 2000w"
           data-sizes="100vw"
-          data-src="./img/glas/fondo2"
+          data-src="./img/glas/pileta 3 miniposte_fondo1.jpg"
           alt=""
           data-uk-cover
           data-uk-img
@@ -428,7 +430,7 @@
           <div class="uk-text-center">
             <img
               src="./img/glas/eficacia.png"
-              data-src="i./img/glas/eficacia.png"
+              data-src="./img/glas/eficacia.png"
               data-uk-img
               alt="Image"
             />
@@ -462,12 +464,15 @@
     <!-- FOOTER -->
     <footer class="uk-section uk-section-secondary uk-padding-remove-bottom">
       <div class="uk-container">
+        <hr class="uk-divider-small uk-margin-large-bottom uk-text-center" />
         <div class="uk-grid uk-grid-large" data-uk-grid>
           <div class="uk-width-1-2@m">
-            <h5>InoGlass</h5>
+            <a class="uk-logo" title="Logo" href="./index.html"
+              ><img src="./img/logos/inoglass blanco.png" alt="Logo"
+            /></a>
             <p>
               Nuestro objetivo es su satisfacción. contacto:
-              <a href="#" title="">inoglass@gmail.com</a>
+              <a href="#" title="">inoglassr4@gmail.com</a>
             </p>
             <div>
               <a href="" class="uk-icon-button" data-uk-icon="facebook"></a>
@@ -509,7 +514,7 @@
           class="uk-nav uk-nav-primary uk-nav-center uk-margin-auto-vertical uk-nav-parent-icon"
           uk-nav
         >
-          <li class="uk-nav-header"><a href="#">INICIO</a></li>
+          <li class="uk-nav-header"><a href="./index.html">INICIO</a></li>
           <li class="uk-nav-header uk-parent">
             <a href="#">PRODUCTOS</a>
             <ul class="uk-nav-sub">
@@ -526,20 +531,19 @@
         <div class="uk-flex uk-flex-column">
           <div class="uk-margin-xlarge-top">
             <hr class="uk-text-center uk-divider-small uk-margin-small" />
-            <h3 class="uk-text-center uk-margin-small">CONTACTAR</h3>
+            <h3 class="uk-text-center uk-margin-small">CONTACTO</h3>
             <h5 class="uk-text-center uk-margin-small">
-              <span
-                class="uk-margin-small-right uk-icon"
-                data-uk-icon="icon: whatsapp"
-              ></span>
-              3585064360
+              <a
+                href="https://wa.me/5493585064360?text=Hola!%20Quiero%20hacer%20una%20consulta!"
+                target="_blank"
+                ><span class="fab fa-whatsapp"></span> 358 5064360</a
+              >
             </h5>
             <h5 class="uk-text-center uk-margin-small">
-              <span
-                class="uk-margin-small-right uk-icon"
-                data-uk-icon="icon: mail"
-              ></span>
-              inoglass@gmail.com
+              <a href="mailto:">
+                <span class="far fa-envelope"></span>
+                inoglassr4@gmail.com</a
+              >
             </h5>
           </div>
         </div>
@@ -551,5 +555,7 @@
     <!-- JS FILES -->
     <script src="./js/uikit.min.js"></script>
     <script src="./js/uikit-icons.min.js"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/logo.js"></script>
   </body>
 </html>
